--- a/books/2017.md
+++ b/books/2017.md
@@ -1,1 +1,5 @@
+---
+layout: page
+Title: Books for 2017
+---
 [Our Moon Has Blood Clots: The Exodus of the Kashmiri Pandits](https://www.goodreads.com/book/show/17265065-our-moon-has-blood-clots) - Rahul Pandita
