--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,3 +24,11 @@
   journal={arXiv preprint arXiv:1604.00100},
   year={2016}
 }
+
+@article{arora2019lexsub,
+    title={Learning Lexical Subspaces in a Distributional Vector Space},
+    author={Arora, Kushal and Chakraborty, Aishik and Cheung, Jackie},
+    journal={Under Review in TACL},
+    url={https://kushalarora.github.io/assets/lexsub.pdf},
+    year={2019}
+}
