added sanjay thakur paper to biblography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,10 +25,17 @@
   year={2016}
 }
 
+@article{thakur2018nips_il,
+    title={Sample Efficient Learning From Demonstrations on Multiple Tasks using Bayesian Neural Networks.},
+    author={Thakur, Sanjay and van-Hoof, Herke and  Gamboa-Higuera, Juan and Arora, Kushal and Precup, Doina and Meger, David},
+    journal={Imitation Learning and its Challenges in Robotics, NeuRIPS 2018, Montreal, Canada},
+    year={2018}
+}
+
 @article{arora2019lexsub,
     title={Learning Lexical Subspaces in a Distributional Vector Space},
     author={Arora, Kushal and Chakraborty, Aishik and Cheung, Jackie},
-    journal={Under Review in TACL},
+    journal={Transaction of the ACL (to appear in April and to be presented at ACL.)},
     url={https://kushalarora.github.io/assets/lexsub.pdf},
     year={2019}
 }
