--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,30 @@
 ---
 
 @string{aps = {American Physical Society,}}
+@article{sharma2024critical,
+  title={A critical evaluation of ai feedback for aligning large language models},
+  author={Sharma, Archit and Keh, Sedrick and Mitchell, Eric and Finn, Chelsea and Arora, Kushal and Kollar, Thomas},
+  journal={arXiv preprint arXiv:2402.12366},
+  year={2024},
+  month = feb,
+  selected = {true}
+}
+@article{mercat2024linearizing,
+  title={Linearizing Large Language Models},
+  author={Mercat, Jean and Vasiljevic, Igor and Keh, Sedrick and Arora, Kushal and Dave, Achal and Gaidon, Adrien and Kollar, Thomas},
+  journal={arXiv preprint arXiv:2405.06640},
+  month = may,
+  year={2024}
+}
+@article{li_2024_data_comp,
+  title={DataComp-LM: In search of the next generation of training sets for language models},
+  author={Li, Jeffrey and Fang, Alex and Smyrnis, Georgios and Ivgi, Maor and Jordan, Matt and Gadre, Samir and Bansal, Hritik and Guha, Etash and Keh, Sedrick and Arora, Kushal and others},
+  journal={arXiv preprint arXiv:2406.11794},
+  month = jun,
+  year = {2024},
+  selected = {true}
+}
+
 @inproceedings{arora_the_stable_entropy_hypo_2023,
   title      = {The Stable Entropy Hypothesis and Entropy-Aware Decoding: An Analysis and Algorithm for Robust Natural Language Generation},
   shorttitle = {The Stable Entropy Hypothesis and Entropy-Aware Decoding},
@@ -11,7 +35,8 @@
   author     = {Arora, Kushal and O'Donnell, Timothy J. and Precup, Doina and Weston, Jason and Cheung, Jackie C.K.},
    month      = jan,
    year       = {2023},
-  booktitle  = {Under Submission, ICML 2023}
+  booktitle  = {Under Submission, ICML 2023},
+  selected = {true}
 }
 
 @inproceedings{banerjeeLexiSelfSupervisedLearning2022,
@@ -69,7 +94,8 @@
   year      = {2022},
   address   = {Tepei, Taiwan},
   publisher = {Asian Association for Computational Linguistics},
-  file       = {Arora et al_2022_DIRECTOR.pdf:/Users/kushal/Zotero/storage/NH2G2U94/Arora et al_2022_DIRECTOR.pdf:application/pdf;arXiv.org Snapshot:/Users/kushal/Zotero/storage/78PKP3BR/2206.html:text/html}
+  file       = {Arora et al_2022_DIRECTOR.pdf:/Users/kushal/Zotero/storage/NH2G2U94/Arora et al_2022_DIRECTOR.pdf:application/pdf;arXiv.org Snapshot:/Users/kushal/Zotero/storage/78PKP3BR/2206.html:text/html},
+  selected = {true}
 }
 @inproceedings{arora-etal-2022-exposure,
   title     = {Why Exposure Bias Matters: An Imitation Learning Perspective of Error Accumulation in Language Generation},
@@ -85,7 +111,8 @@
   url       = {https://aclanthology.org/2022.findings-acl.58},
   doi       = {10.18653/v1/2022.findings-acl.58},
   pages     = {700--710},
-  abstract  = {Current language generation models suffer from issues such as repetition, incoherence, and hallucinations. An often-repeated hypothesis for this brittleness of generation models is that it is caused by the training and the generation procedure mismatch, also referred to as exposure bias. In this paper, we verify this hypothesis by analyzing exposure bias from an imitation learning perspective. We show that exposure bias leads to an accumulation of errors during generation, analyze why perplexity fails to capture this accumulation of errors, and empirically show that this accumulation results in poor generation quality.}
+  abstract  = {Current language generation models suffer from issues such as repetition, incoherence, and hallucinations. An often-repeated hypothesis for this brittleness of generation models is that it is caused by the training and the generation procedure mismatch, also referred to as exposure bias. In this paper, we verify this hypothesis by analyzing exposure bias from an imitation learning perspective. We show that exposure bias leads to an accumulation of errors during generation, analyze why perplexity fails to capture this accumulation of errors, and empirically show that this accumulation results in poor generation quality.},
+  selected = {true}
 }
 
 @article{aroraLearningLexicalSubspaces2020,
